logs/dag_id=user_processing/run_id=manual__2022-11-27T09:58:51.107805+00:00/task_id=store_user/attempt=1.log
[2022-11-27T09:59:12.188+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2022-11-27T09:58:51.107805+00:00 [queued]>
[2022-11-27T09:59:12.208+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2022-11-27T09:58:51.107805+00:00 [queued]>
[2022-11-27T09:59:12.211+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-27T09:59:12.214+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-27T09:59:12.217+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-27T09:59:12.244+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): store_user> on 2022-11-27 09:58:51.107805+00:00
[2022-11-27T09:59:12.267+0000] {standard_task_runner.py:55} INFO - Started process 5326 to run task
[2022-11-27T09:59:12.285+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'manual__2022-11-27T09:58:51.107805+00:00', '--job-id', '37', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmpe5f_tqez']
[2022-11-27T09:59:12.292+0000] {standard_task_runner.py:83} INFO - Job 37: Subtask store_user
[2022-11-27T09:59:12.519+0000] {task_command.py:376} INFO - Running <TaskInstance: user_processing.store_user manual__2022-11-27T09:58:51.107805+00:00 [running]> on host c7f7231a8603
[2022-11-27T09:59:12.634+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2022-11-27T09:58:51.107805+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-27T09:58:51.107805+00:00
[2022-11-27T09:59:12.639+0000] {postgres.py:129} INFO - Running copy expert: COPY user FROM stdin WITH DELIMITER as ',', filename: /tmp/process_user.csv
[2022-11-27T09:59:12.649+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2022-11-27T09:59:12.658+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 28, in _store_user
    filename='/tmp/process_user.csv'
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 137, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "user"
LINE 1: COPY user FROM stdin WITH DELIMITER as ','
             ^

[2022-11-27T09:59:12.673+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20221127T095851, start_date=20221127T095912, end_date=20221127T095912
[2022-11-27T09:59:12.686+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 37 for task store_user (syntax error at or near "user"
LINE 1: COPY user FROM stdin WITH DELIMITER as ','
             ^
; 5326)
[2022-11-27T09:59:12.718+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-27T09:59:12.759+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
